--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-snowpack-app" />
+  <meta name="description" content="Auf dieser Seite kannst du Deine Bedürfnisse angeben und dein Profil erstellen." />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-  <title>Snowpack App</title>
+  <title>Ticket Für Alle</title>
 </head>
 
 <body>
